Fixed tons of bugs in ticket APIs.
Signed-off-by: Attornado <73835871+Attornado@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tutorialtoken",
   "version": "1.0.0",
   "description": "",
-  "main": "truffle.js",
+  "main": "truffle-config.js",
   "directories": {
     "test": "test"
   },
